[package]
authors = ["Marcus Henry Ewert <user@marcushenryewert.com>"]
name = "swear"
version = "0.1.0-dev"
license = "MIT"
description = "A bad implementation in Rust of an approximation of a JS A+ Promise."
readme = "README.md"
repository = "https://github.com/sarum90/swear"
[dependencies]
boxfnonce = "0.1.0"
[badges]
travis-ci = { repository = "sarum90/swear", branch = "master" }
